金额千分位保留两位